src/pages/Home.module.scss
@import "../assets/GlobalVariables.scss";

.container {
    width: var(--page-width);
    max-width: var(--page-max-width);
    margin: 1.6rem auto $footbar-height auto;
    display: flex;
    align-items: center;
    flex-direction: column;
    .label_container {
        width: 100%;
        display: grid;
        gap: 1rem;
        grid-template-columns: 1fr 1fr 1fr;
        margin-bottom: 1rem;
        @media (max-width: 400px) {
            div:nth-child(1) {
                grid-column: 1 / span 2;
            }
            grid-template: 1fr 1fr / 1fr 1fr;
        }
    }
    .welcome_message {
        width: 100%;
        font-size: $welcome_message_font_size;
        font-family: $welcome_message_font, sans-serif;
        font-weight: 900;
        margin: 1.6rem 0;
        text-transform: capitalize;
        text-align: left;
    }
    .food_item_container {
        display: flex;
        width: 100%;
        flex-direction: column;
        align-items: center;
        justify-items: center;
    }
}

